@@ -477,7 +477,9 @@ class DummyControl(UIControl):
         def get_line(i: int) -> StyleAndTextTuples:
             return []
 
-        return UIContent(get_line=get_line, line_count=100**100)  # Something very big.
+        return UIContent(
+            get_line=get_line, line_count=100**100
+        )  # Something very big.
 
     def is_focusable(self) -> bool:
         return False
